--- a/index.html
+++ b/index.html
@@ -1095,12 +1095,14 @@ law enforcement and intellligence agencies.
 
 ## Unwanted Information {#unwanted-information}
 
+Receiving unsolicited information that either may cause distress or waste the recipient's
+time or resources is a violation of privacy. 
+    
 <div class="practice">
 
 <p>
   <span class="practicelab" id="principle-protect-unwanted-information">
-    Receiving unsolicited information that either may cause distress or waste the recipient's
-    time or resources is a violation of privacy. [=User agents=] and other [=actors=] should take
+    [=User agents=] and other [=actors=] should take
     steps to ensure that their [=user=] is not exposed to unwanted information. Technical standards
     must consider the delivery of unwanted information as part of their architecture and must
     mitigate it accordingly.
