Unwanted information principle (#127)
* unwanted information principle

* no need to repeat principles everywhere

* Update index.html

Co-authored-by: Jeffrey Yasskin <jyasskin@google.com>

Co-authored-by: Jeffrey Yasskin <jyasskin@google.com>

--- a/index.html
+++ b/index.html
@@ -1093,11 +1093,46 @@ law enforcement and intellligence agencies.
   This section has not been written.
 </aside>
 
-## Principles for Unwanted Information
+## Unwanted Information {#unwanted-information}
 
-<aside class="issue">
-  This section has not been written.
-</aside>
+Receiving unsolicited information that either may cause distress or waste the recipient's
+time or resources is a violation of privacy. 
+    
+<div class="practice">
+
+<p>
+  <span class="practicelab" id="principle-protect-unwanted-information">
+    [=User agents=] and other [=actors=] should take
+    steps to ensure that their [=user=] is not exposed to unwanted information. Technical standards
+    must consider the delivery of unwanted information as part of their architecture and must
+    mitigate it accordingly.
+  </span>
+</p>
+</div>
+
+Unwanted information covers a broad range of unsolicited communication, from messages that are
+typically harmless individually but that become a nuisance in aggregate (spam) to the sending of
+images that will cause shock or disgust due to their graphic, violent, or explicit nature (eg.
+pictures of one's genitals). While it is impossible, in a communication system involving many
+[=people=], to offer perfect protection against all kinds of unwanted information, steps can be
+taken to make the sending of such messages more difficult or more costly, and to render the senders
+more accountable. Examples of mitigations include:
+
+* Restricting what new users of a service can post, notably limiting links and media until they have
+  interacted a sufficient number of times over a given period with a larger group. This helps to
+  raise the cost of producing sockpuppet accounts and gives new users the occasion to understand
+  local norms before posting.
+* Only accepting communication between [=people=] who have an established relationship of some kind,
+  such as being part of a shared group. Protocols should consider requiring a handshake between
+  [=people=] prior to enabling communication.
+* Requiring a deliberate action from the recipient before rendering media coming from an
+  untrusted source.
+* Supporting the ability for [=people=] to block a [=party=] such that they cannot send information
+  again.
+* Pooling mitigation information, for instance shared block lists, shared spam-detection
+  information, or public information about misbehaving [=actors=]. As always, the collection and
+  sharing of [=information=] for safety purposes should be limited and placed under collective
+  governance.
 
 ## Principles for Vulnerable People
 
