Make onsent context wording clearer
Co-authored-by: Jeffrey Yasskin <jyasskin@google.com>

--- a/index.html
+++ b/index.html
@@ -1142,8 +1142,8 @@ Examples of alternatives to interrupting users with consent requests include:
 
  * Relying on a [=global opt-out=] signal from the [=user agent=].
 
- * Delaying a prompt for consent until a [=user=] is likely to be sufficiently familiar
-   with the site to give an informed response.
+ * Delaying a prompt for consent until a [=user=] does something that puts the request in context,
+    which will also help them give an informed response.
 
 <div class="practice">
 <p>
