--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@ rights in a relevant jurisdiction. (For instance, under [[?GDPR]], the [=person=
 conveying objections to [=processing=] based on legitimate interest or the withdrawal of
 [=consent=] to specific [=purposes=].) It should be noted that, since a [=global opt-out=]
 signal is reaffirmed automatically with every interaction, it will take precedence
-in terms of specificity over any general assertion of [=consent=] by a site,
+in terms of specificity over any general obtention of [=consent=] by a site,
 and only superseded by specific [=consent=] obtained through a deliberate action taken by
 the user with the intent of overriding their global opt-out.
 
