Re-order sentence
Co-authored-by: Jeffrey Yasskin <jyasskin@google.com>

--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@ to the people using a system.
 In specific cases, [=people=] should be able to [=consent=] to more
 sensitive [=purposes=], such as having their [=identity=] recognised across contexts or
 their reading history shared with a company. The burden of proof on ensuring that informed
-[=consent=] has been obtained needs in this case to be very high.
+[=consent=] has been obtained needs to be very high in this case.
 [=Consent=] is comparable to the
 general problem of permissions on the Web platform. In the same way that it should be clear when a
 given device capability is in use (eg. you are providing geolocation or camera access), sharing
