Regret later improve wording
Co-authored-by: Jeffrey Yasskin <jyasskin@google.com>

--- a/index.html
+++ b/index.html
@@ -1120,7 +1120,7 @@ law enforcement and intellligence agencies.
 
 Attempts to obtain consent to [=processing=] that is not in accordance with the person's
 true preferences result in imposing unwanted [=privacy labour=] on the person, and may
-result in people erroneously giving consent that does not match their true preferences.
+result in people erroneously giving consent that they regret later.
 
 <div class="practice">
 <p>
