--- a/index.html
+++ b/index.html
@@ -1058,12 +1058,14 @@ or personalize content around his furry-interest.
 
 <p>
   <span class="practicelab" id="principle-collective-privacy">
-    [=Data=] [=processing=] that has collective consequences, for which informed individualistic
-    decisions are unlikely (due to the complexity of the processing, the volume or frequency of
-    processing, or both), or that cannot operate when individual decisions are enabled (eg. fraud
-    detection) must be governed by legitimate collective rules.
+    [=Data=] [=processing=] that has collective consequences must be governed by legitimate collective rules.
   </span>
 </p>
+
+This includes processing for which informed individualistic
+decisions are unlikely (due to the complexity of the processing, the volume or frequency of
+processing, or both), or that cannot operate when individual decisions are enabled (eg. fraud
+detection).
 </div>
 
 We identify three types of situations in which establishing privacy rules will be
