--- a/index.html
+++ b/index.html
@@ -1445,7 +1445,7 @@ Examples of alternatives to interrupting users with consent requests include:
 
 ## Principles for Notifications and Interruptions
 
-<aside class="issue">This is relateds to [=autonomy=].</aside>
+<aside class="issue">This is related to [=autonomy=].</aside>
 
 Notifications and other interruptive UI can be a powerful way to capture attention. 
 Depending on the operating system in use, a notification can eppear outside of the
