--- a/index.html
+++ b/index.html
@@ -1448,7 +1448,7 @@ Examples of alternatives to interrupting users with consent requests include:
 <aside class="issue">This is related to [=autonomy=].</aside>
 
 Notifications and other interruptive UI can be a powerful way to capture attention. 
-Depending on the operating system in use, a notification can eppear outside of the
+Depending on the operating system in use, a notification can appear outside of the
 browser context (for example, in a general notifications tray) or even cause a device to
 buzz or play an alert tone.
 Like all powerful features, notifications can be misused to and can become an annoyance 
