expanded text on rights additional references

--- a/index.html
+++ b/index.html
@@ -282,6 +282,11 @@
           href: 'https://global.oup.com/academic/product/why-privacy-matters-9780190939045?cc=us&lang=en&',
           publisher: 'Oxford University Press',
         },
+        'Records-Computers-Rights': {
+          title: 'Records, Computers and the Rights of Citizens',
+          publisher: 'U.S. Department of Health, Education & Welfare',
+          href: 'https://archive.epic.org/privacy/hew1973report/'
+        }
       },
     };
   </script>
@@ -566,7 +571,7 @@ TAG's resolution on a [Strong and Secure Web Platform](https://www.w3.org/blog/2
 to ensure that "<i>broad testing and audit continues to be possible</i>" where
 [=information flows=] and automated decisions are involved.
 
-Such transparency can only function if there are strong rights of access to data (including data
+Such transparency can only function if there are strong [rights](#data-rights) of access to data (including data
 derived from one's personal data) as well as mechanisms to explain the outcomes of automated
 decisions.
 
@@ -940,18 +945,30 @@ Note that [=controlled de-identified data=], on its own, is not sufficient to re
 
 ### Rights {#data-rights}
 
-To the extent possible, [=people=] should retain a certain number of rights over their data, and
-these rights should be facilitated by the [=parties=]. While data rights are a self-governing
-mechanism that is not sufficient to support [=privacy=], they do complement self-determination and
-help improve accountability. Such rights should include:
+[=People=] retain certain rights over data about themselves, and these rights should be facilitated by their [=user agent=] and the [=parties=]. While data rights alone are not sufficient to support [=privacy=], they do support self-determination and help improve accountability. Such rights include:
 
 * The right to <em>access</em> [=data=] about oneself.
-* The right to <em>erase</em> [=data=] about oneself, with or without terminating the service (though
-  what [=data=] can be erased may differ between those two cases).
-* The right to <em>port</em> information that one has stored with a given [=party=] in such a way
-  that it can easily be reused or transferred elsewhere.
+
+  This right includes being able to discover data about oneself (no secret databases) and to review what information has been collected or inferred.
+
+* The right to <em>erase</em> [=data=] about oneself, sometimes described as a <em>right to be forgotten</em>. 
+
+  The right to erase applies whether or not terminating use of a service altogether, though what [=data=] can be erased may differ between those two cases. On the Web, [=people=] may wish to erase data on their device, on a server, or both, and the distinctions may not always be clear.
+
+* The right to <em>port</em> [=data=], including data one has stored with a [=party=], so it can easily be reused or transferred elsewhere.
+
+  Portability is needed to realize the ability for [=people=] to make choices about services with different data practices. Standards for interoperability are essential for effective re-use.
+
 * The right to <em>correct</em> [=data=] about oneself, to ensure that one's [=identity=] is
   properly reflected in a system.
+
+* The right to <em>be free from automated decision-making</em> based on data about oneself.
+
+* The right to <em>object, withdraw consent and restrict use</em> of data about oneself.
+
+  [=People=] may change their decisions about consent, or may object to subsequent uses of data about themselves
+
+The legal rights of [=people=] as data subjects are found within the OECD Privacy Principles [[OECD-Guidelines]], [[Records-Computers-Rights]] and the [[GDPR]], among other places. These participatory rights by people over data about themselves are inherent to [=autonomy=]. 
 
 ## Principles for Sensitive Information {#hl-sensitive-information}
 
