--- a/index.html
+++ b/index.html
@@ -964,9 +964,15 @@ Note that [=controlled de-identified data=], on its own, is not sufficient to re
 
 * The right to <em>be free from automated decision-making</em> based on data about oneself.
 
+  For some kinds of decision-making with substantial consequences, there is a privacy interest in being able to exclude oneself from automated profiling.
+
+  <aside class="issue">
+    Should we settle on examples of the kind of automated decision-making that is impactful enough that one can opt out of it? Are there direct ways to apply this to the Web generally?
+  </aside>  
+
 * The right to <em>object, withdraw consent and restrict use</em> of data about oneself.
 
-  [=People=] may change their decisions about consent, or may object to subsequent uses of data about themselves
+  [=People=] may change their decisions about consent, or may object to subsequent uses of data about themselves. Retaining rights requires ongoing control, not just at the time of collection.
 
 The legal rights of [=people=] as data subjects are found within the OECD Privacy Principles [[OECD-Guidelines]], [[Records-Computers-Rights]] and the [[GDPR]], among other places. These participatory rights by people over data about themselves are inherent to [=autonomy=]. 
 
