address comments from @samuelweiler and @jyasskin add two examples of decision making based on data about oneself export definitions formatting

--- a/index.html
+++ b/index.html
@@ -945,36 +945,57 @@ Note that [=controlled de-identified data=], on its own, is not sufficient to re
 
 ### Rights {#data-rights}
 
-[=People=] retain certain rights over data about themselves, and these rights should be facilitated by their [=user agent=] and the [=parties=]. While data rights alone are not sufficient to support [=privacy=], they do support self-determination and help improve accountability. Such rights include:
+[=People=] retain certain rights over data about themselves, and these rights should be facilitated
+by their [=user agent=] and the [=parties=] they're interacting with. While data rights alone are
+not sufficient to satisfy all [=privacy=] principles for the Web, they do support self-determination
+and help improve accountability. Such rights include:
 
-* The right to <em>access</em> [=data=] about oneself.
+* The <dfn data-export="">right to access</dfn> [=data=] about oneself.
 
-  This right includes being able to discover data about oneself (no secret databases) and to review what information has been collected or inferred.
+This right includes being able to discover data about oneself (implying no databases are kept
+secret) and to review
+what information has been collected or inferred.
 
-* The right to <em>erase</em> [=data=] about oneself, sometimes described as a <em>right to be forgotten</em>. 
+* The <dfn data-export="" data-lt="right to be forgotten">right to erase</dfn> [=data=] about
+oneself, sometimes described as a <em>right to be forgotten</em>.
 
-  The right to erase applies whether or not terminating use of a service altogether, though what [=data=] can be erased may differ between those two cases. On the Web, [=people=] may wish to erase data on their device, on a server, or both, and the distinctions may not always be clear.
+The right to erase applies whether or not terminating use of a service altogether, though what
+[=data=] can be erased may differ between those two cases. On the Web, [=people=] may wish to erase
+data on their device, on a server, or both, and the distinctions may not always be clear.
 
-* The right to <em>port</em> [=data=], including data one has stored with a [=party=], so it can easily be reused or transferred elsewhere.
+* The <dfn data-export="" data-lt="right to portability" data-local-lt="portability">right to
+port</dfn> [=data=], including data one has stored with a [=party=], so it can easily be reused or
+transferred elsewhere.
 
-  Portability is needed to realize the ability for [=people=] to make choices about services with different data practices. Standards for interoperability are essential for effective re-use.
+Portability is needed to realize the ability for [=people=] to make choices about services with
+different data practices. Standards for interoperability are essential for effective re-use.
 
-* The right to <em>correct</em> [=data=] about oneself, to ensure that one's [=identity=] is
-  properly reflected in a system.
+* The <dfn data-export="">right to correct</dfn> [=data=] about oneself, to ensure that one's
+[=identity=] is properly reflected in a system.
 
-* The right to <em>be free from automated decision-making</em> based on data about oneself.
+* The <dfn data-export="">right to be free from automated decision-making</dfn> based on [=data=]
+about oneself.
 
-  For some kinds of decision-making with substantial consequences, there is a privacy interest in being able to exclude oneself from automated profiling.
+For some kinds of decision-making with substantial consequences, there is a privacy interest in
+being able to exclude oneself from automated profiling. For example, some services may alter the
+price of products (price discrimination) or offers for credit or insurance based on [=data=]
+collected about a person. Those alterations may be consequential (financially, say) and
+objectionable to people who believe those decisions based on data about them are inaccurate or
+unjust. As another example, some services may draw inferences about a user's identity, humanity or
+presence based on facial recognition algorithms run on camera data. Because facial recognition
+algorithms and training sets are fallible and may exhibit certain biases, people may not wish to
+submit to decisions based on that kind of automated recognition.
 
-  <aside class="issue">
-    Should we settle on examples of the kind of automated decision-making that is impactful enough that one can opt out of it? Are there direct ways to apply this to the Web generally?
-  </aside>  
+* The <dfn data-export=""
+  data-lt="right to object|right to withdraw consent|right to restrict use">right to object,
+withdraw consent, and restrict use</dfn> of data about oneself.
 
-* The right to <em>object, withdraw consent and restrict use</em> of data about oneself.
+[=People=] may change their decisions about consent or may object to subsequent uses of data about
+themselves. Retaining rights requires ongoing control, not just at the time of collection.
 
-  [=People=] may change their decisions about consent, or may object to subsequent uses of data about themselves. Retaining rights requires ongoing control, not just at the time of collection.
-
-The legal rights of [=people=] as data subjects are found within the OECD Privacy Principles [[OECD-Guidelines]], [[Records-Computers-Rights]] and the [[GDPR]], among other places. These participatory rights by people over data about themselves are inherent to [=autonomy=]. 
+The OECD Privacy Principles [[OECD-Guidelines]], [[Records-Computers-Rights]], and the [[GDPR]],
+among other places, include many of the rights [=people=] have as data subjects. These participatory
+rights by people over data about themselves are inherent to [=autonomy=].
 
 ## Principles for Sensitive Information {#hl-sensitive-information}
 
