--- a/index.html
+++ b/index.html
@@ -1451,7 +1451,7 @@ Notifications and other interruptive UI can be a powerful way to capture attenti
 Depending on the operating system in use, a notification can appear outside of the
 browser context (for example, in a general notifications tray) or even cause a device to
 buzz or play an alert tone.
-Like all powerful features, notifications can be misused to and can become an annoyance 
+Like all powerful features, notifications can be misused and can become an annoyance 
 or even used to manipulate behaviour and thus reduce [=atonomy=].
 
 <div class="practice">
