--- a/index.html
+++ b/index.html
@@ -1452,7 +1452,7 @@ Depending on the operating system in use, a notification can appear outside of t
 browser context (for example, in a general notifications tray) or even cause a device to
 buzz or play an alert tone.
 Like all powerful features, notifications can be misused and can become an annoyance 
-or even used to manipulate behaviour and thus reduce [=atonomy=].
+or even used to manipulate behaviour and thus reduce [=autonomy=].
 
 <div class="practice">
 
