--- a/index.html
+++ b/index.html
@@ -1459,7 +1459,7 @@ or even used to manipulate behaviour and thus reduce [=autonomy=].
   <span class="practicelab" id="principle-notifications control">A [=user agent=] should help
     users control notifications and other interruptive UI that can be used to manipulate behavior.</span>
 
-  [=User agents=] should provide UI that allow's their user to audit which web [=sites=] have been granted 
+  [=User agents=] should provide UI that allows their users to audit which web [=sites=] have been granted 
   permission to display alerts and to revoke these permissions.  
   [=User agents=] may also apply some quality metric to the initial request for permissions to receive
   notifications (for example, disallowing sites from requesting permission on first visit).
