--- a/index.html
+++ b/index.html
@@ -1461,7 +1461,7 @@ or even used to manipulate behaviour and thus reduce [=autonomy=].
 
   [=User agents=] should provide UI that allows their users to audit which web [=sites=] have been granted 
   permission to display alerts and to revoke these permissions.  
-  [=User agents=] may also apply some quality metric to the initial request for permissions to receive
+  [=User agents=] should also apply some quality metric to the initial request for permissions to receive
   notifications (for example, disallowing sites from requesting permission on first visit).
   
   <span class="practicelab" id="principle-notifications-context">Web [=sites=] should use notifications
