--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@ created from opaque machine learning techniques).
 
 Protecting group privacy can take place at two different levels. [=People=] may wish to protect
 knowledge that they are members of the group even though the existence of the group and its actions
-may be well knows (eg. membership in a dissidents movement under authoritarian rule). Conversely,
+may be well known (eg. membership in a dissidents movement under authoritarian rule). Conversely,
 the existence of a group or at least its activities may need to be protected even in cases in which
 its members are guaranteed to remain anonymous. An example [=privacy violation=] for the latter case
 is the fitness app Strava that did not reveal individual behaviour or identity but published heat
