--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@ personnel took frequent runs ([[?Strava-Debacle]], [[?Strava-Reveal-Military]]).
 
 When [=people=] do not know that they are members of a group, when they cannot easily find other
 members of the group so as to advocate for their rights together, or when they cannot easily
-understand why they are being categorised into a given group their ability to protect themselves
+understand why they are being categorised into a given group, their ability to protect themselves
 through self-governing approaches to privacy is largely eliminated.
 
 ### Transparency and Research {#transparency}
