--- a/index.html
+++ b/index.html
@@ -589,11 +589,11 @@ classified into it by an external party, typically a bureaucracy or its computer
 grouped together, and the definition of the group may not be intelligible (for instance if it is
 created from opaque machine learning techniques).
 
-Protecting group privacy can take place at two different levels. [=People=] may wish to protect
-knowledge that they are members of the group even though the existence of the group and its actions
-may be well known (eg. membership in a dissidents movement under authoritarian rule). Conversely,
-the existence of a group or at least its activities may need to be protected even in cases in which
-its members are guaranteed to remain anonymous. An example [=privacy violation=] for the latter case
+Protecting group privacy can take place at two different levels. The existence of a group or at
+least its activities may need to be protected even in cases in which its members are guaranteed to
+remain anonymous. Conversely, [=People=] may wish to protect knowledge that they are members of the
+group even though the existence of the group and its actions may be well known (eg. membership in a
+dissidents movement under authoritarian rule). An example [=privacy violation=] for the former case
 is the fitness app Strava that did not reveal individual behaviour or identity but published heat
 maps of popular running routes. In doing so, it revealed secret US bases around which military
 personnel took frequent runs ([[?Strava-Debacle]], [[?Strava-Reveal-Military]]).
@@ -1105,8 +1105,8 @@ or personalize content around his furry-interest.
 
 <p>
   <span class="practicelab" id="principle-collective-privacy">
-    Groups and various forms of institutions may best protect and support autonomy by making
-    decisions that apply collectively rather than individually to either prevent or enable data
+    Groups and various forms of institutions should best protect and support autonomy by making
+    decisions collectively rather than individually to either prevent or enable data
     sharing, and to set defaults for data processing rules.
   </span>
 </p>
