make it clear that @ping didn't deliver on privacy even though it did work for speed

--- a/index.html
+++ b/index.html
@@ -1159,12 +1159,12 @@ functionality it can be made fast (the browser sends an asynchronous notificatio
 endpoint after the [=person=] exits through a link) and the user agent can provide its [=user=] with
 the option to opt out of such tracking — or disable it by default.
 
-Unfortunately, this arrangement proved to be unworkable. What prevents a site from using [^a/ping^]
-for [=people=] who have it activated and bounce tracking for others? What prevents a browsers from
-opting everyone out because it wishes to offer better protection by default? Given the contested
-nature of the [^a/ping^] attribute and the absence of a forcing function to support collective
-enforcement, the scheme largely fell apart and while nominally standardised it is unevenly supported
-in browsers.
+Unfortunately, this arrangement proved to be unworkable on the privacy side (the performance gains,
+however, are real). What prevents a site from using [^a/ping^] for [=people=] who have it activated
+and bounce tracking for others? What prevents a browsers from opting everyone out because it wishes
+to offer better protection by default? Given the contested nature of the [^a/ping^] attribute and
+the absence of a forcing function to support collective enforcement, the scheme failed to deliver
+improved privacy.
 
 ## Principles for Safety Systems {#safety}
 
