notes on share contacts/upload pic

--- a/index.html
+++ b/index.html
@@ -591,9 +591,10 @@ created from opaque machine learning techniques).
 
 Protecting group privacy can take place at two different levels. The existence of a group or at
 least its activities may need to be protected even in cases in which its members are guaranteed to
-remain anonymous. Conversely, [=People=] may wish to protect knowledge that they are members of the
-group even though the existence of the group and its actions may be well known (eg. membership in a
-dissidents movement under authoritarian rule). An example [=privacy violation=] for the former case
+remain anonymous. We refer to this as "group privacy." Conversely, [=People=] may wish to protect
+knowledge that they are members of the group even though the existence of the group and its actions
+may be well known (eg. membership in a dissidents movement under authoritarian rule), which we call
+"membership privacy". An example [=privacy violation=] for the former case
 is the fitness app Strava that did not reveal individual behaviour or identity but published heat
 maps of popular running routes. In doing so, it revealed secret US bases around which military
 personnel took frequent runs ([[?Strava-Debacle]], [[?Strava-Reveal-Military]]).
@@ -602,6 +603,15 @@ When [=people=] do not know that they are members of a group, when they cannot e
 members of the group so as to advocate for their rights together, or when they cannot easily
 understand why they are being categorised into a given group, their ability to protect themselves
 through self-governing approaches to privacy is largely eliminated.
+
+One common problem in group privacy is when the actions of one member of a group reveals information
+that other members would prefer were not shared in this way (or at all). For instance, one person
+may publish a picture of an event in which they are featured alongside others while the other people
+captured in the same picture would prefer their participation not to be disclosed. Another example
+of such issues are sites that enable people to upload their contacts: the person performing the
+upload might be more open to disclosing their social networks than the people they are connected to
+are. Such issues do not necessarily admit simple, straightforward solutions but they need to be
+carefully considered by people building websites.
 
 ### Transparency and Research {#transparency}
 
