Refine and clarify the definitions of first and third parties.

--- a/index.html
+++ b/index.html
@@ -1210,8 +1210,8 @@ law enforcement and intellligence agencies.
 ## Unwanted Information {#unwanted-information}
 
 Receiving unsolicited information that either may cause distress or waste the recipient's
-time or resources is a violation of privacy. 
-    
+time or resources is a violation of privacy.
+
 <div class="practice">
 
 <p>
@@ -1363,20 +1363,18 @@ they're interacting with. Uses of this document in a particular domain are expec
 the core concepts of that domain combine into a [=user=]-comprehensible [=party=], and those refined
 definitions are likely to differ between domains.
 
-The <dfn data-lt="first parties">first party</dfn> is a [=party=] with which a [=person=] intends to
-interact. Merely hovering over, muting, pausing, or closing a given piece of content does
-not mean a [=person=] intends to interact with another party, nor does the simple
-fact of loading a [=party=] embedded in the one with which the person intends to
-interact. In cases of clear and conspicuous joint branding, there can be multiple [=first
-parties=]. The [=first party=] is necessarily a [=data controller=] of the data processing
-that takes places as a consequence of a [=person=] interacting with it.
+The [=parties=] that a reasonable person would think they are interacting with are known
+as the <dfn id="dfn-first-party" data-lt="first party">first parties</dfn>. Usually, there
+is just one first party, but clear-enough joint branding can make people aware that
+they're interacting with multiple other parties. When a [=person=] hovers over, mutes,
+pauses, or closes a piece of content controlled by a different party, that doesn't imply
+that they're aware that they've interacted with a different party. Simply loading content
+controlled by another [=party=] especially doesn't imply this. When data is entered in the
+context of a [=first party=], that party is accountable for the ways that data gets
+processed, even if another party does the processing.
 
-<aside class="issue">Refine the description of third parties so it matches
-intuition better.</aside>
-
-A <dfn data-lt="third parties">third party</dfn> is any [=party=] other than the [=person=] visiting the website,
-the [=first party=], or a [=service provider=] acting on behalf of either the [=person=] or
-the [=first party=].
+A <dfn data-lt="third parties">third party</dfn> is any [=party=] other than the [=person=] visiting the website
+or the [=first parties=] they expect to be interacting with.
 
 ## Acting on Data {#acting-on-data}
 
