Replace some fancy terms with their definitions.

--- a/index.html
+++ b/index.html
@@ -710,19 +710,22 @@ make them more precise.
 
 ## Balancing Different Privacy Principles {#balancing}
 
-Sometimes the most obvious response to one privacy principle is in tension with another
-privacy principle. Often this happens when one user of a service is trying to invade
-another user's privacy: keeping a user's information private can limit the ways that a
-service can protect them or another user.
+While privacy principles are designed to work together and support each other,
+occasionally a proposal to improve how a system follows one privacy principle will reduce
+how well it follows another principle.
 
 <div class="practice">
 
 <p><span class="practicelab" id="principle-pareto-frontier">When confronted with an
-apparent tradeoff, first seek the Pareto frontier.</span></p>
+apparent tradeoff, first look for ways to improve all principles at once.</span></p>
 
-Given any initial design that doesn't perfectly satisfy all goals, there are usually some
-other designs that improve the situation for some goals without sacrificing anything about
-the other goals. Work to find those designs.
+Given any initial design that doesn't perfectly satisfy all principles, there are usually
+some other designs that improve the situation for some principles without sacrificing
+anything about the other principles. Work to find those designs.
+
+Another way to say this is to look for [Pareto
+improvements](https://en.wikipedia.org/wiki/Pareto_efficiency) before starting to trade
+off between principles.
 
 </div>
 
