remove 'right to be forgotten' phrasing unhelpful in this particular context, as discussed on taskforce call

--- a/index.html
+++ b/index.html
@@ -956,8 +956,7 @@ This right includes being able to discover data about oneself (implying no datab
 secret) and to review
 what information has been collected or inferred.
 
-* The <dfn data-export="" data-lt="right to be forgotten">right to erase</dfn> [=data=] about
-oneself, sometimes described as a <em>right to be forgotten</em>.
+* The <dfn data-export="" data-lt="right to erase">right to erase</dfn> [=data=] about oneself.
 
 The right to erase applies whether or not terminating use of a service altogether, though what
 [=data=] can be erased may differ between those two cases. On the Web, [=people=] may wish to erase
